# ItchWHMMCP

./: CONTRIBUTING.md  LICENSE  README.md  accounts.json.template  mcp.json  pyproject.toml
src/: accounts.py  server.py  tools.py
