[project]
name = "ItchWHMMCP"
version = "1.0.0"
description = "WHM/cPanel MCP Server — Multi-Account Root Access for any MCP-compatible AI client"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "whm", "cpanel", "hosting", "server-management", "claude", "cursor", "ai"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "asyncssh>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/manofsadness/ItchWHMMCP"
Issues = "https://github.com/manofsadness/ItchWHMMCP/issues"

[project.scripts]
itchwhmmcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
